# thyme

./: .clang-tidy  .editorconfig  .gitignore  Justfile  LICENSE  README.md  meson.build
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
docs/: thyme.md  thyme.norg
fnl/: version_extraction.fnl
include/thyme/: cli_handler.hpp  cli_handlers.hpp  error.hpp  fennel_scripts.hpp  generated.hpp  synchronized_process.hpp  thyme.hpp  version.hpp
include/thyme/formatted_message/: formatted_message.hpp  message_writer.hpp  messages.hpp
src/: cli_handler.cpp  cli_handlers.cpp  main.cpp  synchronized_process.cpp  thyme.cpp
src/cli_handlers/: default.cpp  new.cpp  version.cpp
subprojects/: expected.wrap  tiny-process-lib.wrap
template/: fennel_scripts.cpp.in  generated.cpp.in  version.cpp.in
test/: meson.build
